--- a/index.html
+++ b/index.html
@@ -12,30 +12,28 @@
     <div class="main">
         <div class="calcBody">
             <div class="display">
-                <div class="numberEntered"><p>1+2+4+5*166+2+#+4+$+5</p></div>
-                <div class="displayResult"><p>1245</p></div>
+                <div class="numberEntered"></div>
+                <div class="displayResult"></div>
             </div>
             <div class="buttons">
-                <div class="calcButton">CLEAR</div>
-                <div class="calcButton"></div>
-                <div class="calcButton">DEL</div>
-                <div class="calcButton">/</div>
-                <div class="calcButton">7</div>
-                <div class="calcButton">8</div>
-                <div class="calcButton">9</div>
-                <div class="calcButton">X</div>
-                <div class="calcButton">4</div>
-                <div class="calcButton">5</div>
-                <div class="calcButton">6</div>
-                <div class="calcButton">-</div>
-                <div class="calcButton">1</div>
-                <div class="calcButton">2</div>
-                <div class="calcButton">3</div>
-                <div class="calcButton">+</div>
-                <div class="calcButton">0</div>
-                <div class="calcButton">0</div>
-                <div class="calcButton">.</div>
-                <div class="calcButton">=</div>
+                <button class="calcButton btnClear">CLEAR</button>
+                <button class="calcButton">DEL</button>
+                <button class="calcButton">&divide</button>
+                <button class="calcButton">7</button>
+                <button class="calcButton">8</button>
+                <button class="calcButton">9</button>
+                <button class="calcButton">x</button>
+                <button class="calcButton">4</button>
+                <button class="calcButton">5</button>
+                <button class="calcButton">6</button>
+                <button class="calcButton">-</button>
+                <button class="calcButton">1</button>
+                <button class="calcButton">2</button>
+                <button class="calcButton">3</button>
+                <button class="calcButton">+</button>
+                <button class="calcButton btnZero">0</button>
+                <button class="calcButton">.</button>
+                <button class="calcButton">=</button>
             </div>
         </div>
     </div>
