Add necessary feature required except for the delete button
Delete button still doesnt work as intended.

--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <div class="main">
         <div class="calcBody">
             <div class="display">
-                <div class="numberEntered"></div>
-                <div class="displayResult"></div>
+                <div data-topDisplay class="numberEntered"></div>
+                <div data-bottomDisplay class="displayResult"></div>
             </div>
             <div class="buttons">
-                <button class="calcButton btnClear">CLEAR</button>
-                <button class="calcButton">DEL</button>
-                <button class="calcButton">&divide</button>
-                <button class="calcButton">7</button>
-                <button class="calcButton">8</button>
-                <button class="calcButton">9</button>
-                <button class="calcButton">x</button>
-                <button class="calcButton">4</button>
-                <button class="calcButton">5</button>
-                <button class="calcButton">6</button>
-                <button class="calcButton">-</button>
-                <button class="calcButton">1</button>
-                <button class="calcButton">2</button>
-                <button class="calcButton">3</button>
-                <button class="calcButton">+</button>
-                <button class="calcButton btnZero">0</button>
-                <button class="calcButton">.</button>
-                <button class="calcButton">=</button>
+                <button data-clear class="calcButton btnClear">CLEAR</button>
+                <button data-delete class="calcButton">DEL</button>
+                <button data-operator class="calcButton">&divide</button>
+                <button data-number class="calcButton">7</button>
+                <button data-number class="calcButton">8</button>
+                <button data-number class="calcButton">9</button>
+                <button data-operator class="calcButton">x</button>
+                <button data-number class="calcButton">4</button>
+                <button data-number class="calcButton">5</button>
+                <button data-number class="calcButton">6</button>
+                <button data-operator class="calcButton">-</button>
+                <button data-number class="calcButton">1</button>
+                <button data-number class="calcButton">2</button>
+                <button data-number class="calcButton">3</button>
+                <button data-operator class="calcButton">+</button>
+                <button data-number class="calcButton btnZero">0</button>
+                <button data-number class="calcButton">.</button>
+                <button data-equal class="calcButton">=</button>
             </div>
         </div>
     </div>
